@@ -153,7 +153,10 @@ namespace Stetic
 		{
 			if (disposed)
 				return;
-				
+			
+			if (project.App.ActiveProject == editedProject)
+				project.App.ActiveProject = null;
+			
 			disposed = true;
 			frontend.disposed = true;
 			editedProject.SignalAdded -= OnSignalAdded;
